pseudo coding on javascript page, set up button on html

--- a/index.html
+++ b/index.html
@@ -280,6 +280,11 @@
                         <div class="col-md-2">
                         </div>
                     </div>
+                    <div class="row text-center">
+                        <div class="col-md-12">
+                            <button type="button" class="btn btn-secondary button-finish" data-toggle="modal" data-target="#start-score-modal">Finished!</button>
+                        </div>
+                    </div>
                 </form>
                 
             </div>
