Updated pseudo code and working on checkbox counter for correct answers

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     <!-- Modal body -->
                     <div class="modal-body">
                         <div class="endGame">
-                            <p>Correct Answers:<span class="correctAnswers"></span></p>
-                            <p>Incorrect Answers:<span class="incorrectAnswers"></span></p>
-                            <p>Unanswered:<span class="noAnswers"></span></p>
+                            <p>Correct Answers:<span class="correctAnswerNum"></span></p>
+                            <p>Incorrect Answers:<span class="incorrectAnswerNum"></span></p>
+                            <p>Unanswered:<span class="noAnswerNum"></span></p>
                         </div>
                     </div>
             
@@ -85,9 +85,9 @@
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                    <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
-                                        Butter and Flour*
+                                        Butter and Flour
                                     </label>
                                 </div>
                                 <div class="form-check">
@@ -121,9 +121,9 @@
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
                                 <label class="form-check-label" for="defaultCheck2">
-                                    Braise*
+                                    Braise
                                 </label>
                             </div>
                         </div>
@@ -139,9 +139,9 @@
                             <div class="form-group">
                             <label for="formGroupExampleInput">Al dente pasta will be cooked to which texture?</label>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                    <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck1">
                                     <label class="form-check-label" for="defaultCheck2">
-                                        Slightly firm*
+                                        Slightly firm
                                     </label>
                                 </div>
                                 <div class="form-check">
@@ -169,9 +169,9 @@
                             <div class="form-group">
                             <label for="formGroupExampleInput">To zest a citrus fruit is to:</label>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                    <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck1">
                                     <label class="form-check-label" for="defaultCheck2">
-                                        Grate or scrape off part of the rind*
+                                        Grate or scrape off part of the rind
                                     </label>
                                 </div>
                                 <div class="form-check">
@@ -211,9 +211,9 @@
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                        <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
-                                            Emulsified*
+                                            Emulsified
                                         </label>
                                     </div>
                                 </div>
@@ -241,9 +241,9 @@
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                        <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
-                                            16*
+                                            16
                                         </label>
                                     </div>
                                 </div>
@@ -265,9 +265,9 @@
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                        <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
-                                            Cheese*
+                                            Cheese
                                         </label>
                                     </div>
                                     <div class="form-check">
@@ -289,9 +289,9 @@
                                 <div class="form-group">
                                 <label for="formGroupExampleInput">What does "au jus" mean?</label>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                        <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck1">
                                         <label class="form-check-label" for="defaultCheck2">
-                                            Served with the natural cooking juices* 
+                                            Served with the natural cooking juices
                                         </label>
                                     </div>
                                     <div class="form-check">
