--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
                             <div class="form-group">
                             <label for="formGroupExampleInput">A roux is used to thicken soups or sauces. What is it usually made from?</label>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                    <input class="form-check-input1" type="checkbox" name="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                         Egg and Flour
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
+                                    <input class="form-check-input1" type="checkbox" name="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                         Butter and Flour
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                    <input class="form-check-input1" type="checkbox" name="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                         Water and Flour
                                     </label>
@@ -109,19 +109,19 @@
                         <div class="form-group">
                         <label for="formGroupExampleInput">What is this cooking technique called? "First sear a meat and then cook it over low heat for a long period of time."</label>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                <input class="form-check-input2" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                 <label class="form-check-label" for="defaultCheck2">
                                     Roast
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                <input class="form-check-input2" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                 <label class="form-check-label" for="defaultCheck2">
                                     Blanch
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
+                                <input class="form-check-input2" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
                                 <label class="form-check-label" for="defaultCheck2">
                                     Braise
                                 </label>
@@ -139,19 +139,19 @@
                             <div class="form-group">
                             <label for="formGroupExampleInput">Al dente pasta will be cooked to which texture?</label>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck1">
+                                    <input class="form-check-input3" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                         Slightly firm
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                    <input class="form-check-input3" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                         Very soft
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                    <input class="form-check-input3" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                         Falling apart
                                     </label>
@@ -169,19 +169,19 @@
                             <div class="form-group">
                             <label for="formGroupExampleInput">To zest a citrus fruit is to:</label>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck1">
+                                    <input class="form-check-input4" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                         Grate or scrape off part of the rind
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                    <input class="form-check-input4" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                         Squeeze juice from the pulp
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                    <input class="form-check-input4" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                         Cut the fruit into small pieces
                                     </label>
@@ -199,19 +199,19 @@
                                 <div class="form-group">
                                 <label for="formGroupExampleInput">When droplets of oil and vinegar are mixed together so they are no longer separate, they have been...?</label>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                        <input class="form-check-input5" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
                                             Clarified
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                        <input class="form-check-input5" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
                                             Extracted
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
+                                        <input class="form-check-input5" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
                                             Emulsified
                                         </label>
@@ -229,19 +229,19 @@
                                 <div class="form-group">
                                 <label for="formGroupExampleInput">Roughly how many tablespoons are in 1 cup?</label>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                        <input class="form-check-input6" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
                                             8
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                        <input class="form-check-input6" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
                                             12
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
+                                        <input class="form-check-input6" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
                                             16
                                         </label>
@@ -259,19 +259,19 @@
                                 <div class="form-group">
                                 <label for="formGroupExampleInput">Saint Andre, Burrata, Emmentaler and Halloumi are types of..?</label>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                        <input class="form-check-input7" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
                                             Wine
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
+                                        <input class="form-check-input7" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
                                             Cheese
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                        <input class="form-check-input7" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
                                             Chocolate
                                         </label>
@@ -289,19 +289,19 @@
                                 <div class="form-group">
                                 <label for="formGroupExampleInput">What does "au jus" mean?</label>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" name="correctCheckbox" value="" id="defaultCheck1">
+                                        <input class="form-check-input8" type="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
                                             Served with the natural cooking juices
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                        <input class="form-check-input8" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
                                             Cooked in wine
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                        <input class="form-check-input8" type="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
                                         <label class="form-check-label" for="defaultCheck2">
                                             Cooked with citrus or other fruit juices
                                         </label>
