working on linking stopwatch with button clicks, adding up correct versus incorrect checkboxes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input1" type="checkbox" name="checkbox" name="incorrectCheckbox" value="" id="defaultCheck2">
+                                    <input class="form-check-input1" type="checkbox" name="checkbox" name="correctCheckbox" value="" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                         Butter and Flour
                                     </label>
