Corrected issues so game is console logging counter time, correct answers logged, game play/stop

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                         <div class="endGame">
                             <p>Correct Answers:<span class="correctAnswerNum"></span></p>
                             <p>Incorrect Answers:<span class="incorrectAnswerNum"></span></p>
-                            <p>Unanswered:<span class="noAnswerNum"></span></p>
                         </div>
                     </div>
             
@@ -79,20 +78,20 @@
                             <div class="form-group">
                             <label for="formGroupExampleInput">A roux is used to thicken soups or sauces. What is it usually made from?</label>
                                 <div class="form-check">
-                                    <input class="form-check-input1b" type="radio" name="radio" value="" id="defaultCheck1">
-                                    <label class="form-check-label" for="defaultCheck2">
+                                    <input class="form-check-input1" type="radio" name="radio2" value="" id="defaultCheck1">
+                                    <label class="form-check-label" for="defaultCheck1">
                                         Egg and Flour
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input1b" type="radio" name="radio" value="" id="defaultCheck2">
+                                    <input class="form-check-input1" type="radio" name="radio2" value="" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                         Butter and Flour
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input1b" type="radio" name="radio" value="" id="defaultCheck3">
-                                    <label class="form-check-label" for="defaultCheck2">
+                                    <input class="form-check-input1" type="radio" name="radio2" value="" id="defaultCheck3">
+                                    <label class="form-check-label" for="defaultCheck3">
                                         Water and Flour
                                     </label>
                                 </div>
@@ -118,7 +117,7 @@
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input1b" type="radio" name="radio1" value="1" id="defaultCheck4">
+                                    <input class="form-check-input1b" type="radio" name="radio1" value="1" id="defaultCheck2">
                                     <label class="form-check-label" for="defaultCheck2">
                                         Butter and Flour
                                     </label>
