corrected functionality for function calling order, game is mostly working!

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
         
-                <form>
+                <form id="myForm">
                     <div class="row">
                         <div class="col-md-2">
                         </div> 
@@ -352,8 +352,8 @@
                     <!-- Modal body -->
                     <div class="modal-body">
                         <div class="endGame">
-                            <p>Correct Answers:<span class="correctAnswerNum"></span></p>
-                            <p>Incorrect Answers:<span class="incorrectAnswerNum"></span></p>
+                            <p>Correct Answers: <span class="correctAnswerNum"></span></p>
+                            <p>Incorrect Answers: <span class="incorrectAnswerNum"></span></p>
                         </div>
                     </div>
 
