pushing updates for radio buttons

--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
                             <label for="formGroupInput">A roux is used to thicken soups or sauces. What is it usually made from?</label>
                                 <div class="form-check">
                                     <div class="custom-control custom-radio">
-                                        <input type="radio" id="customRadio1" value="0" name="customRadio1" class="custom-control-input">
+                                        <input type="radio" id="customRadio1" value="0" name="customRadio1" class="custom-control-input" checked>
                                         <label class="custom-control-label" for="customRadio1">Egg and Flour</label>
                                     </div>
                                 </div>
                                 <div class="form-check">
                                     <div class="custom-control custom-radio">
-                                        <input type="radio" id="customRadio1" value="1" name="customRadio1" class="custom-control-input">
+                                        <input type="radio" id="customRadio1" value="1" name="customRadio2" class="custom-control-input">
                                         <label class="custom-control-label" for="customRadio1">Butter and Flour</label>
                                     </div>
                                 </div>    
                                 <div class="form-check">
                                     <div class="custom-control custom-radio">
-                                        <input type="radio" id="customRadio1" value="0" name="customRadio1" class="custom-control-input">
+                                        <input type="radio" id="customRadio1" value="0" name="customRadio3" class="custom-control-input">
                                         <label class="custom-control-label" for="customRadio1">Water and Flour</label>
                                     </div>
                                 </div>
@@ -103,19 +103,19 @@
                             <label for="formGroupInput">To zest a citrus fruit is to:</label>
                                 <div class="form-check">
                                     <div class="custom-control custom-radio">
-                                        <input type="radio" id="customRadio2" value="1" name="customRadio2" class="custom-control-input">
+                                        <input type="radio" id="customRadio2" value="1" name="customRadio1" class="custom-control-input">
                                         <label class="custom-control-label" for="customRadio2">Grate or scrape off part of the rind</label>
                                     </div>
                                 </div>
                                 <div class="form-check">
                                     <div class="custom-control custom-radio">
-                                        <input type="radio" id="customRadio2" value="0" name="customRadio2" class="custom-control-input">
+                                        <input type="radio" id="customRadio2" value="0" name="customRadio2" class="custom-control-input" checked>
                                         <label class="custom-control-label" for="customRadio2">Squeeze juice from the pulp</label>
                                     </div>
                                 </div>
                                 <div class="form-check">
                                     <div class="custom-control custom-radio">
-                                        <input type="radio" id="customRadio2" value="0" name="customRadio2" class="custom-control-input">
+                                        <input type="radio" id="customRadio2" value="0" name="customRadio3" class="custom-control-input">
                                         <label class="custom-control-label" for="customRadio2">Cut the fruit into small pieces</label>
                                     </div>
                                 </div>
@@ -133,19 +133,19 @@
                             <label for="formGroupInput">When droplets of oil and vinegar are mixed together so they are no longer separate, they have been...?</label>
                                 <div class="form-check">
                                     <div class="custom-control custom-radio">
-                                        <input type="radio" id="customRadio3" value="0" name="customRadio3" class="custom-control-input">
+                                        <input type="radio" id="customRadio3" value="0" name="customRadio1" class="custom-control-input">
                                         <label class="custom-control-label" for="customRadio3">Clarified</label>
                                     </div>
                                 </div>
                                 <div class="form-check">
                                     <div class="custom-control custom-radio">
-                                        <input type="radio" id="customRadio3" value="0" name="customRadio3" class="custom-control-input">
+                                        <input type="radio" id="customRadio3" value="0" name="customRadio2" class="custom-control-input">
                                         <label class="custom-control-label" for="customRadio3">Extracted</label>
                                     </div>
                                 </div>
                                 <div class="form-check">
                                     <div class="custom-control custom-radio">
-                                        <input type="radio" id="customRadio3" value="1" name="customRadio3" class="custom-control-input">
+                                        <input type="radio" id="customRadio3" value="1" name="customRadio3" class="custom-control-input" checked>
                                         <label class="custom-control-label" for="customRadio3">Emulsified</label>
                                     </div>
                                 </div>
